# Stroustrup

./: .gitignore  CMakeLists.txt  CPPLINT.cfg
Chapter 9/: CMakeLists.txt
Chapter 9/Date/: CMakeLists.txt
Chapter 9/Date/includes/: Date.h  Month.h
Chapter 9/Date/sources/: Month.cpp  Year.cpp  main.cpp
Chapter 9/Pairs/sources/: Name_pairs.cpp  main.cpp
Chapter_9/: CMakeLists.txt
Chapter_9/includes/: Date.hpp  Day.hpp  Month.hpp  Pause.hpp  Year.hpp
Chapter_9/sources/: Date.cpp  Day.cpp  Month.cpp  Year.cpp  main.cpp
Date/includes/: Year.h
Date/sources/: Date.cpp
Pairs/: CMakeLists.txt
Pairs/includes/: Name_pairs.h
fltk-test/: CMakeLists.txt  Main.cpp
lib/book/: CMakeLists.txt
lib/book/src/: Book.cpp
lib/book/test/: CMakeLists.txt
lib/chapter 9/date/: CMakeLists.txt
lib/chapter 9/date/include/: Date.h  Day.h  Month.h  Year.h
lib/chapter 9/date/interface/: Date.h  Month.h  Year.h
lib/chapter 9/date/realization/: Date.cpp  Day.cpp  Month.cpp  Year.cpp
lib/chapter 9/date/src/: Date.cpp  Day.cpp  Month.cpp  Year.cpp
lib/chapter 9/date/test/: leapyear-test.cpp
lib/chapter_9/book/: CMakeLists.txt
lib/chapter_9/book/include/: Book.h
lib/chapter_9/book/src/: Book.cpp
lib/chapter_9/date/: CMakeLists.txt
lib/chapter_9/date/include/: Date.h  Day.h  Month.h  Year.h
lib/chapter_9/date/src/: Date.cpp  Day.cpp  Month.cpp  Year.cpp
lib/chapter_9/date/test/: dayOfWeek.cpp  day_of_week.cpp  leapyear.cpp  next_sunday.cpp  next_weekday.cpp
lib/chapter_9/name_pairs/: CMakeLists.txt
lib/chapter_9/name_pairs/include/: Name_pairs.h
lib/chapter_9/name_pairs/src/: Name_pairs.cpp
lib/chapter_9/name_pairs/test/: operatorEq.cpp  operatorNotEq.cpp
lib/chapter_9/patron/: CMakeLists.txt
lib/chapter_9/patron/include/: Patron.h
lib/chapter_9/patron/src/: Patron.cpp
lib/date/: CMakeLists.txt
lib/date/headers/: Date.h
lib/date/include/: Date.h  Month.h
lib/date/sources/: Date.cpp  Day.cpp  Month.cpp
lib/date/src/: Day.cpp  Month.cpp
lib/date/test/: CMakeLists.txt  Day_of_week.cpp  Next_weekday.cpp
lib/gui/: CMakeLists.txt
lib/gui/color/: CMakeLists.txt
lib/gui/color/include/: Color.h
lib/gui/color/src/: Color.cpp
lib/gui/observer/: CMakeLists.txt
lib/gui/observer/include/: Observer.h  Subject.h
lib/gui/observer/src/: Subject.cpp
lib/gui/point/include/: Point.h
lib/gui/point/src/: Point.cpp
lib/gui/shape/: CMakeLists.txt
lib/gui/shape/include/: Shape.h
lib/gui/shape/src/: Shape.cpp
lib/gui/text/: CMakeLists.txt
lib/gui/window/: CMakeLists.txt
lib/gui/window/include/: Window.h
lib/gui/window/src/: Window.cpp
lib/money/: CMakeLists.txt
lib/money/include/: Conversions.h  Converter.h  Currency.h  Money.h
lib/money/src/: Conversions.cpp  Converter.cpp  Money.cpp
lib/money/test/: CMakeLists.txt  ConvertFromUSCToDKK.cpp  ConvertFromUSCToUSD.cpp  ConvertToUSC.cpp  EqualToOperator.cpp  InputOperator.cpp  Main.cpp  OutputOperator.cpp
lib/namepairs/: CMakeLists.txt
lib/namepairs/include/: Namepairs.h
lib/namepairs/src/: Namepairs.cpp
lib/namepairs/test/: CMakeLists.txt  EqualOperator.cpp  EqualToOperator.cpp  NotEqualOperator.cpp  operatorEq.cpp  operatorNotEq.cpp
lib/patron/: CMakeLists.txt
lib/patron/include/: Patron.h
lib/patron/src/: Patron.cpp
lib/patron/test/: CMakeLists.txt  Main.cpp
lib/rational/: CMakeLists.txt
lib/rational/include/: Rational.h
lib/rational/src/: Rational.cpp
lib/rational/test/: AdditionOperator.cpp  CMakeLists.txt  DivisionOperator.cpp  EqualOperator.cpp  EqualToOperator.cpp  MultiplicationOperator.cpp  SubtractionOperator.cpp  ToDouble.cpp
lib/roman_int/: CMakeLists.txt
lib/roman_int/include/: RomanInt.h  Roman_int.h
lib/roman_int/src/: RomanInt.cpp  Roman_int.cpp
lib/roman_int/test/: CMakeLists.txt  EqualToOperator.cpp  InputOperator.cpp  OutputOperator.cpp
lib/sum/: CMakeLists.txt
lib/sum/include/: Sum.h
lib/sum/src/: Sum.cpp
lib/sum/test/: CMakeLists.txt  Sum.cpp
lib/sum/test/files/: File2.txt  File3.txt
libraries/date/: CMakeLists.txt
libraries/date/interface/: Date.h  Day.h  Month.h
libraries/date/sources/: Date.cpp  Day.cpp  Day.h  Month.cpp  Month.h  Year.cpp  Year.h
libraries/pairs/: CMakeLists.txt
libraries/pairs/headers/: Name_pairs.h
libraries/pairs/sources/: Name_pairs.cpp  main.cpp
sources/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
