add_subdirectory ("axis")
add_subdirectory ("circle")
add_subdirectory ("closed-polyline")
add_subdirectory ("ellipse")
add_subdirectory ("function")
add_subdirectory ("image")
add_subdirectory ("line")
add_subdirectory ("lines")
add_subdirectory ("mark")
add_subdirectory ("marked-polyline")
add_subdirectory ("marks")
add_subdirectory ("open-polyline")
add_subdirectory ("polygon")
add_subdirectory ("rectangle")
add_subdirectory ("shape")
add_subdirectory ("text")