# add_subdirectory ("axis")
# add_subdirectory ("button")
# add_subdirectory ("circle")
# add_subdirectory ("closed-polyline")
add_subdirectory ("color")
# add_subdirectory ("ellipse")
# add_subdirectory ("function")
# add_subdirectory ("image")
# add_subdirectory ("in-box")
# add_subdirectory ("line")
# add_subdirectory ("line-style")
# add_subdirectory ("lines")
# add_subdirectory ("mark")
# add_subdirectory ("marked-polyline")
# add_subdirectory ("marks")
# add_subdirectory ("menu")
add_subdirectory ("observer")
# add_subdirectory ("open-polyline")
# add_subdirectory ("out-box")
add_subdirectory ("point")
# add_subdirectory ("polygon")
# add_subdirectory ("rectangle")
add_subdirectory ("shape")
# add_subdirectory ("simple-window")
# add_subdirectory ("text")
add_subdirectory ("window")